adding section home and skills

--- a/index.html
+++ b/index.html
@@ -100,8 +100,85 @@
     <!--==================== MAIN ====================-->
     <main class="main">
       <!--==================== HOME ====================-->
-      <section class="home section" id="home"></section>
+      <section class="home section" id="home">
+        <div class="home__container container grid">
+          <h1 class="home__name">Wedgles Elinaldo</h1>
 
+          <div class="home__profile">
+            <div class="home__image">
+              <img
+                src="assets/img/profile/profile.jpg"
+                alt=""
+                class="home__img"
+              />
+              <div class="home__shadow"></div>
+            </div>
+
+            <div class="home__social">
+              <a
+                href="https://www.linkedin.com/in/wedgles-elinaldo97/"
+                target="_blank"
+                class="home__social-link"
+              >
+                <i class="ri-linkedin-box-fill"></i>
+              </a>
+
+              <a
+                href="https://github.com/Wedgles97"
+                target="_blank"
+                class="home__social-link"
+              >
+                <i class="ri-github-fill"></i>
+              </a>
+
+              <a
+                href="https://www.instagram.com/wedgles_/"
+                target="_blank"
+                class="home__social-link"
+              >
+                <i class="ri-instagram-fill"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="home__info">
+            <p class="home__description">
+              <b>Desenvolvedor Front-End</b> com habilidades em HTML, CSS e
+              JavaScript, experiente em criar interfaces de usuário atraentes e
+              funcionais.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!--==================== Skills ===================-->
+      <section class="skills section" id="skills">
+        <div class="skills__container container grid">
+          <h2 class="skills__name">Tecnologias</h2>
+          <ul class="skills__list">
+            <li class="skills__item">
+              <i class="ri-reactjs-fill"></i>
+            </li>
+            <li class="skills__item">
+              <i class="ri-javascript-fill"></i>
+            </li>
+            <li class="skills__item">
+              <i class="ri-html5-fill"></i>
+            </li>
+            <li class="skills__item">
+              <i class="ri-css3-fill"></i>
+            </li>
+          </ul>
+
+          <a href="#about" class="home__scroll">
+            <div class="arrow-down">
+              <i class="ri-arrow-down-s-line"></i>
+              <i class="ri-arrow-down-s-line"></i>
+              <i class="ri-arrow-down-s-line"></i>
+            </div>
+          </a>
+        </div>
+      </section>
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about"></section>
 
