--- a/index.html
+++ b/index.html
@@ -193,7 +193,16 @@
     </main>
 
     <!--==================== FOOTER ====================-->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__container container grid">
+        <span class="footer__copy">
+          &#169; 2023 Todos os direitos reservados por
+          <a href="https://www.linkedin.com/in/wedgles-elinaldo97/"
+            >Wedgles Elinaldo</a
+          >
+        </span>
+      </div>
+    </footer>
 
     <!--========== SCROLL UP ==========-->
 
