adding section projects

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 target="_blank"
                 class="home__social-link"
               >
-                <i class="ri-instagram-fill"></i>
+                <i class="ri-instagram-line"></i>
               </a>
             </div>
           </div>
@@ -154,7 +154,10 @@
       <!--==================== Skills ===================-->
       <section class="skills section" id="skills">
         <div class="skills__container container grid">
-          <h2 class="skills__name">Tecnologias</h2>
+          <h2 class="section__title-1">
+            <span>Tecnologias</span>
+          </h2>
+
           <ul class="skills__list">
             <li class="skills__item">
               <i class="ri-reactjs-fill"></i>
@@ -186,7 +189,187 @@
       <section class="services section"></section>
 
       <!--==================== PROJECTS ====================-->
-      <section class="projects section" id="projects"></section>
+      <section class="projects section" id="projects">
+        <h2 class="section__title-1">
+          <span>Projetos</span>
+        </h2>
+
+        <div class="projects__container container grid">
+          <!-- !Projeto Portfolio -->
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/projects/project-3.jpg"
+                alt="projeto 3"
+                class="projects__img"
+              />
+
+              <a href="" class="projects__button button">
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+
+            <div class="projects__content">
+              <h3 class="projects__subtitle">Website</h3>
+              <h2 class="projects__title">Portfolio</h2>
+
+              <p class="projects__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                quae neque soluta blanditiis, voluptate excepturi omnis facilis
+                eaque error eveniet cupiditate.
+              </p>
+            </div>
+
+            <div class="projects__buttons">
+              <a href="" target="_blank" class="projects__link">
+                <i class="ri-github-line"></i> Github
+              </a>
+              <a href="" target="_blank" class="projects__link">
+                <i class="ri-dribbble-line"></i> Deploy
+              </a>
+            </div>
+          </article>
+
+          <!-- !Projeto Product Card Preview -->
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/projects/project-product-preview.png"
+                alt="Projeto Produto Card Preview"
+                class="projects__img"
+              />
+
+              <a
+                href="https://wedgles97.github.io/product-preview-card-component/"
+                class="projects__button button"
+              >
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+
+            <div class="projects__content">
+              <h3 class="projects__subtitle">Website</h3>
+              <h2 class="projects__title">Produto Preview Card</h2>
+
+              <p class="projects__description">
+                Esta é uma solução para o desafio do componente do cartão de
+                visualização do produto no Frontend Mentor. Os desafios do
+                Frontend Mentor ajudam você a melhorar suas habilidades de
+                codificação criando projetos realistas.
+              </p>
+            </div>
+
+            <div class="projects__buttons">
+              <a
+                href="https://github.com/Wedgles97/product-preview-card-component"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-github-line"></i> Github
+              </a>
+              <a
+                href="https://wedgles97.github.io/product-preview-card-component/"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-dribbble-line"></i> Deploy
+              </a>
+            </div>
+          </article>
+
+          <!-- !Projeto SoundPad -->
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/projects/project-soundpad.png"
+                alt="Projeto Soundpad"
+                class="projects__img"
+              />
+
+              <a
+                href="https://wedgles97.github.io/sound-pad/"
+                class="projects__button button"
+              >
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+
+            <div class="projects__content">
+              <h3 class="projects__subtitle">Website</h3>
+              <h2 class="projects__title">Soundpad</h2>
+
+              <p class="projects__description">
+                Projeto de um SoundPad, onde aprendi a interação de teclado e
+                mouse, podendo se utilizar os números do NUMPAD, para que os
+                sons sejam ativados, foi usado apenas HTML, CSS E JavaScript.
+              </p>
+            </div>
+
+            <div class="projects__buttons">
+              <a
+                href="https://github.com/Wedgles97/sound-pad"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-github-line"></i> Github
+              </a>
+              <a
+                href="https://wedgles97.github.io/sound-pad/"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-dribbble-line"></i> Deploy
+              </a>
+            </div>
+          </article>
+
+          <!-- !Projeto Beauty Salon - Origin Six -->
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/projects/project-beautysalon.png"
+                alt="Projeto Beauty Salon"
+                class="projects__img"
+              />
+
+              <a
+                href="https://wedgles97.github.io/beautysaloon/"
+                class="projects__button button"
+              >
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+
+            <div class="projects__content">
+              <h3 class="projects__subtitle">Website</h3>
+              <h2 class="projects__title">Origin Six - Beauty Salon</h2>
+
+              <p class="projects__description">
+                OriginSix é um projeto de uma landing page do salão de beleza
+                BeautySaloon, esse projeto foi construído durante a Next Level
+                Week - Together evento realizado pela Rocketseat.
+              </p>
+            </div>
+
+            <div class="projects__buttons">
+              <a
+                href="https://github.com/Wedgles97/beautysaloon"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-github-line"></i> Github
+              </a>
+              <a
+                href="https://wedgles97.github.io/beautysaloon/"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-dribbble-line"></i> Deploy
+              </a>
+            </div>
+          </article>
+        </div>
+      </section>
 
       <!--==================== CONTACT ====================-->
       <section class="contact section" id="contact"></section>
