adding section about

--- a/index.html
+++ b/index.html
@@ -183,7 +183,41 @@
         </div>
       </section>
       <!--==================== ABOUT ====================-->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+        <div class="about__container container grid">
+          <h2 class="section__title-1">Sobre me</h2>
+
+          <div class="about__info">
+            <p class="about__description">
+              Sou um entusiasta iniciante em programação web, com experiência
+              sólida em <strong>HTML</strong>, <strong>CSS</strong> e
+              <strong>JavaScript</strong>. Desde pequeno, sou apaixonado pela
+              área de tecnologia e programação, e comecei a me envolver nesse
+              universo aos 13 anos, criando um servidor SA-MP no GTA San
+              Andreas. <br /><br />Atualmente, estou focado em aprimorar meus
+              conhecimentos em <strong>React</strong>,
+              <strong>TypeScript</strong> e <strong>Node.js</strong>. Estou em
+              uma emocionante transição de carreira, buscando minha primeira
+              oportunidade como desenvolvedor web. Sou dedicado, curioso e
+              apaixonado por resolver problemas. Gosto de enfrentar desafios e
+              estou sempre em busca de aprendizado contínuo. Valorizo o trabalho
+              em equipe e a oportunidade de aprender com profissionais
+              talentosos. Se você procura um desenvolvedor empenhado em
+              crescimento e contribuição, estou aqui!
+            </p>
+            <div class="about__buttons">
+              <a href="#contact" class="button">
+                <i class="ri-send-plane-line"></i>
+                Contate-me
+              </a>
+
+              <a href="#" target="_blank" class="button__ghost">
+                <i class="ri-linkedin-box-line"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== SERVICES ====================-->
       <section class="services section"></section>
