--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     />
     <meta name="author" content="Portfolio" />
   </head>
-  <body class="">
+  <body>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
@@ -63,13 +63,13 @@
               <a href="#about" class="nav__link">Sobre</a>
             </li>
             <li class="nav__item">
-              <a href="#project" class="nav__link">Projetos</a>
+              <a href="#projects" class="nav__link">Projetos</a>
             </li>
             <li class="nav__item">
-              <a href="#contact" class="nav__link">Contato</a>
+              <a href="#footer" class="nav__link">Contato</a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link" download="Wedgles CV"
+              <a href="assets/archive/Wedgles-CV.pdf" class="nav__link" download="Wedgles CV"
                 >Baixar CV <i class="ri-download-2-fill"></i>
               </a>
             </li>
@@ -219,9 +219,6 @@
         </div>
       </section>
 
-      <!--==================== SERVICES ====================-->
-      <section class="services section"></section>
-
       <!--==================== PROJECTS ====================-->
       <section class="projects section" id="projects">
         <h2 class="section__title-1">
@@ -233,8 +230,8 @@
           <article class="projects__card">
             <div class="projects__image">
               <img
-                src="assets/img/projects/project-3.jpg"
-                alt="projeto 3"
+                src="assets/img/projects/project_portfolio.png"
+                alt="Projeto Portfolio"
                 class="projects__img"
               />
 
@@ -321,7 +318,7 @@
               />
 
               <a
-                href="https://wedgles97.github.io/sound-pad/"
+                href="https://wedgles97.github.io/sound-pad/" target="_blank"
                 class="projects__button button"
               >
                 <i class="ri-arrow-right-up-line"></i>
@@ -405,12 +402,8 @@
         </div>
       </section>
 
-      <!--==================== CONTACT ====================-->
-      <section class="contact section" id="contact"></section>
-    </main>
-
     <!--==================== FOOTER ====================-->
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="footer__container container grid">
         <span class="footer__copy">
           &#169; 2023 Todos os direitos reservados por
@@ -427,8 +420,6 @@
     </a>
     <!--=============== SCROLLREVEAL ===============-->
     <script src=""></script>
-
-    <!--=============== EMAIL JS ===============-->
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
