--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
               <a href="#footer" class="nav__link">Contato</a>
             </li>
             <li class="nav__item">
-              <a href="assets/archive/Wedgles-CV.pdf" class="nav__link" download="Wedgles CV"
+              <a
+                href="assets/archive/Wedgles-CV.pdf"
+                class="nav__link"
+                download="Wedgles CV"
                 >Baixar CV <i class="ri-download-2-fill"></i>
               </a>
             </li>
@@ -211,7 +214,11 @@
                 Contate-me
               </a>
 
-              <a href="#" target="_blank" class="button__ghost">
+              <a
+                href="https://www.linkedin.com/in/wedgles-elinaldo97/"
+                target="_blank"
+                class="button__ghost"
+              >
                 <i class="ri-linkedin-box-line"></i>
               </a>
             </div>
@@ -235,7 +242,11 @@
                 class="projects__img"
               />
 
-              <a href="" class="projects__button button">
+              <a
+                href="https://wedgles97.github.io/my-portfolio/"
+                target="_blank"
+                class="projects__button button"
+              >
                 <i class="ri-arrow-right-up-line"></i>
               </a>
             </div>
@@ -256,7 +267,7 @@
                 <i class="ri-github-line"></i> Github
               </a>
               <a href="" target="_blank" class="projects__link">
-                <i class="ri-dribbble-line"></i> Deploy
+                <i class="ri-link"></i> Deploy
               </a>
             </div>
           </article>
@@ -272,6 +283,7 @@
 
               <a
                 href="https://wedgles97.github.io/product-preview-card-component/"
+                target="_blank"
                 class="projects__button button"
               >
                 <i class="ri-arrow-right-up-line"></i>
@@ -303,7 +315,7 @@
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-dribbble-line"></i> Deploy
+                <i class="ri-link"></i> Deploy
               </a>
             </div>
           </article>
@@ -318,7 +330,8 @@
               />
 
               <a
-                href="https://wedgles97.github.io/sound-pad/" target="_blank"
+                href="https://wedgles97.github.io/sound-pad/"
+                target="_blank"
                 class="projects__button button"
               >
                 <i class="ri-arrow-right-up-line"></i>
@@ -349,7 +362,7 @@
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-dribbble-line"></i> Deploy
+                <i class="ri-link"></i> Deploy
               </a>
             </div>
           </article>
@@ -365,6 +378,7 @@
 
               <a
                 href="https://wedgles97.github.io/beautysaloon/"
+                target="_blank"
                 class="projects__button button"
               >
                 <i class="ri-arrow-right-up-line"></i>
@@ -395,21 +409,24 @@
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-dribbble-line"></i> Deploy
+                <i class="ri-link"></i> Deploy
               </a>
             </div>
           </article>
         </div>
       </section>
-
+    </main>
     <!--==================== FOOTER ====================-->
     <footer class="footer" id="footer">
       <div class="footer__container container grid">
         <span class="footer__copy">
           &#169; 2023 Todos os direitos reservados por
-          <a href="https://www.linkedin.com/in/wedgles-elinaldo97/"
-            >Wedgles Elinaldo</a
+          <a
+            href="https://www.linkedin.com/in/wedgles-elinaldo97/"
+            target="_blank"
           >
+            Wedgles Elinaldo
+          </a>
         </span>
       </div>
     </footer>
@@ -418,8 +435,6 @@
     <a href="#" class="scrollup" id="scroll-up">
       <i class="ri-arrow-up-s-line"></i>
     </a>
-    <!--=============== SCROLLREVEAL ===============-->
-    <script src=""></script>
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
