update about and footer contact

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           <span class="nav__title">Menu</span>
           <ul class="nav__list">
             <li class="nav__item">
+              <a href="#home" class="nav__link">Inicio</a>
+            </li>
+            <li class="nav__item">
               <a href="#about" class="nav__link">Sobre</a>
             </li>
             <li class="nav__item">
@@ -192,36 +195,22 @@
 
           <div class="about__info">
             <p class="about__description">
-              Sou um entusiasta iniciante em programação web, com experiência
-              sólida em <strong>HTML</strong>, <strong>CSS</strong> e
-              <strong>JavaScript</strong>. Desde pequeno, sou apaixonado pela
-              área de tecnologia e programação, e comecei a me envolver nesse
-              universo aos 13 anos, criando um servidor SA-MP no GTA San
-              Andreas. <br /><br />Atualmente, estou focado em aprimorar meus
-              conhecimentos em <strong>React</strong>,
-              <strong>TypeScript</strong> e <strong>Node.js</strong>. Estou em
-              uma emocionante transição de carreira, buscando minha primeira
-              oportunidade como desenvolvedor web. Sou dedicado, curioso e
-              apaixonado por resolver problemas. Gosto de enfrentar desafios e
-              estou sempre em busca de aprendizado contínuo. Valorizo o trabalho
-              em equipe e a oportunidade de aprender com profissionais
-              talentosos. Se você procura um desenvolvedor empenhado em
-              crescimento e contribuição, estou aqui!
-            </p>
-            <div class="about__buttons">
-              <a href="#contact" class="button">
-                <i class="ri-send-plane-line"></i>
-                Contate-me
-              </a>
+              Eu me chamo <strong>Wedgles</strong> <i>(ued rsrs)</i>, um
+              desenvolvedor web freelancer com experiência em
+              <strong>desenvolvimento Front-End</strong>. <br /><br />
 
-              <a
-                href="https://www.linkedin.com/in/wedgles-elinaldo97/"
-                target="_blank"
-                class="button__ghost"
+              Desenvolvedor web apaixonado por criar experiências incríveis no
+              frontend. Experiente em HTML, CSS e JavaScript, focado em combinar
+              design atrativo com funcionalidade perfeita. Comprometido em
+              entregar soluções web que cativam os usuários.<br /><br />
+
+              Entre em contato comigo pelo
+              <a href="https://www.linkedin.com/in/wedgles-elinaldo97/">
+                LinkedIn</a
               >
-                <i class="ri-linkedin-box-line"></i>
-              </a>
-            </div>
+              ou por <a href="mailto:wedegles@gmail.com">e-mail</a> para saber
+              mais sobre meu trabalho.
+            </p>
           </div>
         </div>
       </section>
@@ -256,9 +245,8 @@
               <h2 class="projects__title">Portfolio</h2>
 
               <p class="projects__description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
-                quae neque soluta blanditiis, voluptate excepturi omnis facilis
-                eaque error eveniet cupiditate.
+                Projeto portfolio pessoal, criado apenas com HTML, CSS e
+                Javascript, utilizando a metodologia mobile first.
               </p>
             </div>
 
@@ -419,14 +407,55 @@
     <!--==================== FOOTER ====================-->
     <footer class="footer" id="footer">
       <div class="footer__container container grid">
+        <div class="footer__data">
+          <h2 class="section__title-2">Vamos Conversar?</h2>
+
+          <p class="footer__description">
+            Ficarei feliz em saber mais sobre seus projetos e como podemos
+            trabalhar juntos para torná-los realidade. <br /><br />Me mande um
+            <a href="#" target="_blank">email</a> ou uma mensagem no
+            <a
+              href="https://www.linkedin.com/in/wedgles-elinaldo97/"
+              target="_blank"
+              >linkedin</a
+            >.
+          </p>
+
+          <div class="footer__social">
+            <a
+              href="https://www.linkedin.com/in/wedgles-elinaldo97/"
+              target="_blank"
+              class="footer__social-link"
+            >
+              <i class="ri-linkedin-box-fill"></i>
+            </a>
+
+            <a
+              href="https://github.com/Wedgles97"
+              target="_blank"
+              class="footer__social-link"
+            >
+              <i class="ri-github-fill"></i>
+            </a>
+
+            <a
+              href="https://www.instagram.com/wedgles_/"
+              target="_blank"
+              class="footer__social-link"
+            >
+              <i class="ri-instagram-line"></i>
+            </a>
+          </div>
+        </div>
         <span class="footer__copy">
-          &#169; 2023 Todos os direitos reservados por
+          &#169; 2023
           <a
             href="https://www.linkedin.com/in/wedgles-elinaldo97/"
             target="_blank"
           >
-            Wedgles Elinaldo
+            Wedgles Elinaldo.
           </a>
+          Todos os direitos reservados
         </span>
       </div>
     </footer>
