change of icons of skills and cards of projects

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <a
                 href="https://www.linkedin.com/in/wedgles-elinaldo97/"
                 target="_blank"
-                class="home__social-link"
+                class="social-link linkedin"
               >
                 <i class="ri-linkedin-box-fill"></i>
               </a>
@@ -132,7 +132,7 @@
               <a
                 href="https://github.com/Wedgles97"
                 target="_blank"
-                class="home__social-link"
+                class="social-link github"
               >
                 <i class="ri-github-fill"></i>
               </a>
@@ -140,7 +140,7 @@
               <a
                 href="https://www.instagram.com/wedgles_/"
                 target="_blank"
-                class="home__social-link"
+                class="social-link instagram"
               >
                 <i class="ri-instagram-line"></i>
               </a>
@@ -166,16 +166,16 @@
 
           <ul class="skills__list">
             <li class="skills__item">
-              <i class="ri-reactjs-fill"></i>
+              <img src="./assets/img/icons/react-i.svg" alt="React Icon" />
             </li>
             <li class="skills__item">
-              <i class="ri-javascript-fill"></i>
+              <img src="./assets/img/icons/js-i.svg" alt="JavaScript Icon" />
             </li>
             <li class="skills__item">
-              <i class="ri-html5-fill"></i>
+              <img src="./assets/img/icons/html5-i.svg" alt="HTML5 Icon" />
             </li>
             <li class="skills__item">
-              <i class="ri-css3-fill"></i>
+              <img src="./assets/img/icons/css3-i.svg" alt="CSS3 Icon" />
             </li>
           </ul>
 
@@ -204,12 +204,13 @@
               design atrativo com funcionalidade perfeita. Comprometido em
               entregar soluções web que cativam os usuários.<br /><br />
 
-              Entre em contato comigo pelo
+              Estou disponível para contato via
               <a href="https://www.linkedin.com/in/wedgles-elinaldo97/">
                 LinkedIn</a
               >
-              ou por <a href="mailto:wedegles@gmail.com">e-mail</a> para saber
-              mais sobre meu trabalho.
+              ou <a href="mailto:wedegles@gmail.com">e-mail</a>, ansioso para
+              compartilhar mais sobre meu trabalho e como posso enriquecer seus
+              projetos. Vamos criar algo extraordinário juntos!
             </p>
           </div>
         </div>
@@ -230,18 +231,16 @@
                 alt="Projeto Portfolio"
                 class="projects__img"
               />
-
-              <a
-                href="https://wedgles97.github.io/my-portfolio/"
-                target="_blank"
-                class="projects__button button"
-              >
-                <i class="ri-arrow-right-up-line"></i>
-              </a>
             </div>
 
             <div class="projects__content">
               <h3 class="projects__subtitle">Website</h3>
+              <div class="projects__technologies">
+                <img src="./assets/img/icons/html5-i.svg" alt="HTML5 Icon" />
+                <img src="./assets/img/icons/css3-i.svg" alt="CSS3 Icon" />
+                <img src="./assets/img/icons/js-i.svg" alt="JavaScript Icon" />
+              </div>
+
               <h2 class="projects__title">Portfolio</h2>
 
               <p class="projects__description">
@@ -268,25 +267,21 @@
                 alt="Projeto Produto Card Preview"
                 class="projects__img"
               />
-
-              <a
-                href="https://wedgles97.github.io/product-preview-card-component/"
-                target="_blank"
-                class="projects__button button"
-              >
-                <i class="ri-arrow-right-up-line"></i>
-              </a>
             </div>
 
             <div class="projects__content">
               <h3 class="projects__subtitle">Website</h3>
+              <div class="projects__technologies">
+                <img src="./assets/img/icons/html5-i.svg" alt="HTML5 Icon" />
+                <img src="./assets/img/icons/css3-i.svg" alt="CSS3 Icon" />
+                <img src="./assets/img/icons/js-i.svg" alt="JavaScript Icon" />
+              </div>
               <h2 class="projects__title">Produto Preview Card</h2>
 
               <p class="projects__description">
-                Esta é uma solução para o desafio do componente do cartão de
-                visualização do produto no Frontend Mentor. Os desafios do
-                Frontend Mentor ajudam você a melhorar suas habilidades de
-                codificação criando projetos realistas.
+                Projeto feito para finalizar um desafio do site Front-End
+                Mentor, no qual foi utilizado a metodologia Mobile First,
+                flexbox.
               </p>
             </div>
 
@@ -316,24 +311,21 @@
                 alt="Projeto Soundpad"
                 class="projects__img"
               />
-
-              <a
-                href="https://wedgles97.github.io/sound-pad/"
-                target="_blank"
-                class="projects__button button"
-              >
-                <i class="ri-arrow-right-up-line"></i>
-              </a>
             </div>
 
             <div class="projects__content">
               <h3 class="projects__subtitle">Website</h3>
+              <div class="projects__technologies">
+                <img src="./assets/img/icons/html5-i.svg" alt="HTML5 Icon" />
+                <img src="./assets/img/icons/css3-i.svg" alt="CSS3 Icon" />
+                <img src="./assets/img/icons/js-i.svg" alt="JavaScript Icon" />
+              </div>
               <h2 class="projects__title">Soundpad</h2>
 
               <p class="projects__description">
-                Projeto de um SoundPad, onde aprendi a interação de teclado e
-                mouse, podendo se utilizar os números do NUMPAD, para que os
-                sons sejam ativados, foi usado apenas HTML, CSS E JavaScript.
+                Neste projeto coloquei em prática o javascript, fazendo com que
+                os sons sejam ativados utilizando o click do mouse ou o teclado
+                númerico.
               </p>
             </div>
 
@@ -363,24 +355,20 @@
                 alt="Projeto Beauty Salon"
                 class="projects__img"
               />
-
-              <a
-                href="https://wedgles97.github.io/beautysaloon/"
-                target="_blank"
-                class="projects__button button"
-              >
-                <i class="ri-arrow-right-up-line"></i>
-              </a>
             </div>
 
             <div class="projects__content">
               <h3 class="projects__subtitle">Website</h3>
+              <div class="projects__technologies">
+                <img src="./assets/img/icons/html5-i.svg" alt="HTML5 Icon" />
+                <img src="./assets/img/icons/css3-i.svg" alt="CSS3 Icon" />
+                <img src="./assets/img/icons/js-i.svg" alt="JavaScript Icon" />
+              </div>
               <h2 class="projects__title">Origin Six - Beauty Salon</h2>
 
               <p class="projects__description">
-                OriginSix é um projeto de uma landing page do salão de beleza
-                BeautySaloon, esse projeto foi construído durante a Next Level
-                Week - Together evento realizado pela Rocketseat.
+                Projeto construído durante a Next Level Week - Together evento
+                realizado pela Rocketseat.
               </p>
             </div>
 
@@ -425,7 +413,7 @@
             <a
               href="https://www.linkedin.com/in/wedgles-elinaldo97/"
               target="_blank"
-              class="footer__social-link"
+              class="social-link linkedin"
             >
               <i class="ri-linkedin-box-fill"></i>
             </a>
@@ -433,7 +421,7 @@
             <a
               href="https://github.com/Wedgles97"
               target="_blank"
-              class="footer__social-link"
+              class="social-link github"
             >
               <i class="ri-github-fill"></i>
             </a>
@@ -441,7 +429,7 @@
             <a
               href="https://www.instagram.com/wedgles_/"
               target="_blank"
-              class="footer__social-link"
+              class="social-link instagram"
             >
               <i class="ri-instagram-line"></i>
             </a>
